--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@prisma/client": "^3.10.0",
+    "apollo-server-express": "^3.6.4",
+    "express": "^4.17.3",
     "graphql": "^16.3.0",
     "nexus": "^1.3.0",
     "prisma": "^3.10.0"
