--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "dotenv": "^16.0.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
@@ -17,8 +21,10 @@
   "dependencies": {
     "@prisma/client": "^3.10.0",
     "apollo-server-express": "^3.6.4",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "nexus": "^1.3.0",
     "prisma": "^3.10.0"
   }
