--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/graphql-upload": "^8.0.11",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "dotenv": "^16.0.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
@@ -24,7 +26,9 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
+    "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "nexus": "^1.3.0",
     "prisma": "^3.10.0"
   }
