--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.18.2",
     "@prisma/client": "^3.10.0",
     "apollo-server-express": "^3.6.4",
     "bcryptjs": "^2.4.3",
@@ -29,6 +30,7 @@
     "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "multer-cloud-storage": "^2.8.0",
     "nexus": "^1.3.0",
     "prisma": "^3.10.0"
   }
