--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^3.10.0",
     "apollo-server-express": "^3.6.4",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.10.8",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
     "graphql-upload": "^13.0.0",
