--- a/web/package.json
+++ b/web/package.json
@@ -6,14 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript-urql": "^3.5.5",
+    "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "urql": "^2.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.7",
+    "@graphql-codegen/typescript-document-nodes": "2.2.7",
+    "@graphql-codegen/typescript-operations": "2.3.4",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "autoprefixer": "^10.4.2",
