--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript-urql": "^3.5.5",
+    "@reduxjs/toolkit": "^1.8.0",
     "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "urql": "^2.2.0"
   },
   "devDependencies": {
@@ -24,8 +27,11 @@
     "@graphql-codegen/typescript": "2.4.7",
     "@graphql-codegen/typescript-document-nodes": "2.2.7",
     "@graphql-codegen/typescript-operations": "2.3.4",
+    "@types/eslint": "8.4.1",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/react-dom": "17.0.2",
+    "@types/react-redux": "^7.1.23",
     "autoprefixer": "^10.4.2",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
