--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript-urql": "^3.5.5",
     "@reduxjs/toolkit": "^1.8.0",
+    "formik": "^2.2.9",
     "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
