--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "urql": "^2.2.0"
+    "urql": "^2.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
