--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/graphql-upload": "^8.0.11",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
@@ -27,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.10.8",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "graphql": "^16.3.0",
     "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
