--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/graphql-upload": "^8.0.11",
@@ -26,6 +27,7 @@
     "@prisma/client": "^3.10.0",
     "apollo-server-express": "^3.6.4",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.1.3",
     "dayjs": "^1.10.8",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
@@ -35,6 +37,7 @@
     "multer": "^1.4.4",
     "multer-cloud-storage": "^2.8.0",
     "nexus": "^1.3.0",
-    "prisma": "^3.10.0"
+    "prisma": "^3.10.0",
+    "redis": "^4.0.4"
   }
 }
