--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,9 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-redux": "^7.2.6",
+    "react-use-file-upload": "^0.9.1",
     "redux": "^4.1.2",
     "urql": "^2.2.0",
     "yup": "^0.32.11"
@@ -34,6 +36,7 @@
     "@types/react": "17.0.40",
     "@types/react-dom": "17.0.2",
     "@types/react-redux": "^7.1.23",
+    "@types/yup": "^0.29.13",
     "autoprefixer": "^10.4.2",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
