--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "graphql": "^16.3.0",
     "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
+    "memorystore": "^1.6.7",
     "multer": "^1.4.4",
     "multer-cloud-storage": "^2.8.0",
     "nexus": "^1.3.0",
