--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "apollo-server-express": "^3.6.4",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^6.1.3",
+    "cors": "^2.8.5",
     "dayjs": "^1.10.8",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
