--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@graphql-codegen/typescript-urql": "^3.5.5",
     "@reduxjs/toolkit": "^1.8.0",
     "@urql/exchange-multipart-fetch": "^0.1.14",
+    "apollo-link-http": "^1.5.17",
     "formik": "^2.2.9",
     "graphql": "^16.3.0",
     "next": "12.1.0",
